--- a/BlazorToDoTasks.Client/_Imports.razor
+++ b/BlazorToDoTasks.Client/_Imports.razor
@@ -8,6 +8,8 @@
 @using Microsoft.JSInterop
 @using BlazorToDoTasks.Client
 @using BlazorToDoTasks.Client.Components
+@using BlazorToDoTasks.Client.Components.Layout
 @using BlazorToDoTasks.Client.Util
+@using BlazorToDoTasks.Client.Services
 @using BlazorBootstrap;
 
