--- a/BlazorToDoTasks.Client/Components/Layout/MainLayout.razor
+++ b/BlazorToDoTasks.Client/Components/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a href="/taskviewmodels"><i class="bi bi-list-task"></i></a>
         </div>
 
         <article class="content px-4">
