--- a/BlazorToDoTasks.Client/Pages/TaskViewModelPages/Edit.razor
+++ b/BlazorToDoTasks.Client/Pages/TaskViewModelPages/Edit.razor
@@ -1,4 +1,4 @@
-﻿@page "/TaskViewModels/edit"
+﻿@* @page "/TaskViewModels/edit"
 @using BlazorToDoTasks.Client.ViewModels
 @inject IToDoTasksService service
 @inject NavigationManager NavigationManager
@@ -18,8 +18,9 @@ else
     <div class="row">
         <div class="col-md-4">
             <EditForm method="post" Model="TaskViewModel" OnValidSubmit="UpdateTaskViewModel" FormName="edit" Enhance>
+                <ServerValidator @ref="_serverValidator" />
                 <DataAnnotationsValidator />
-                <ValidationSummary />
+               
                 <input type="hidden" name="TaskViewModel.Id" value="@TaskViewModel.Id" />
                 <div class="mb-3">
                     <label for="title" class="form-label">Title:</label>
@@ -43,7 +44,7 @@ else
                 </div>
                 <div class="mb-3">
                     <label for="done" class="form-label">Done:</label>
-                    <InputCheckbox id="done" @bind-Value="TaskViewModel.Done" class="form-control" />
+                    <InputCheckbox id="done" @bind-Value="TaskViewModel.Done" class="form-check-input" />
                     <ValidationMessage For="() => TaskViewModel.Done" class="text-danger" />
                 </div>
                 <button type="submit" class="btn btn-primary">Save</button>
@@ -63,8 +64,7 @@ else
     [SupplyParameterFromForm]
     public TaskViewModel? TaskViewModel { get; set; }
 
-    private EditContext editContext;
-    private ValidationMessageStore validationMessageStore;
+    private ServerValidator _serverValidator;
     private string ServerError { get; set; }
 
     protected override async Task OnInitializedAsync()
@@ -92,13 +92,7 @@ else
         }
         else
         {
-            validationMessageStore.Clear();
-            foreach (var error in response)
-            {
-                var fieldIdentifier = new FieldIdentifier(TaskViewModel, error.PropertyName);
-                validationMessageStore.Add(fieldIdentifier, error.ErrorMessage);
-            }
-            editContext.NotifyValidationStateChanged();
+            _serverValidator.DisplayErrors(response);
         }
     }
 
@@ -106,4 +100,4 @@ else
     {
         return service.GetTaskById(id)!=null;
     }
-}
+} *@
